k8s/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreservice
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: coreservice
          image: ghcr.io/vcharrie/demo_application:a9ba2dfd768b2039595eab3b53cc7172f4b0c1d7
